accept group send endorsements for multi-recipient sends